fix: product details images squishing
- this was happening for items with tasting notes (long notes)

--- a/src/client/src/views/product-details/ProductDetailsContent.css
+++ b/src/client/src/views/product-details/ProductDetailsContent.css
@@ -21,6 +21,8 @@
 
 .product-details .product-image {
     height: 400px;
+    min-height: 400px;
+    min-width: 300px;
     mix-blend-mode: multiply;
     width: 300px;
 }
